# growthbook-openfeature-provider-python

./: .release-please-config.json  CHANGELOG.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release-please.yml  release.yml
examples/: basic_usage.py
src/growthbook_openfeature_provider/: __init__.py  provider.py
tests/: test_growthbook_provider.py  test_provider.py  test_run_async.py
